mapping libs